--- a/app/assets/stylesheets/market.css.scss
+++ b/app/assets/stylesheets/market.css.scss
@@ -15,6 +15,37 @@
 @import 'layouts/basic';
 @import 'layouts/header';
 
+/* fixed bootstrap navbar right margin width
+------------------------------------------------ */
+.navbar-static-top { margin-bottom: 0px; }
+.navbar-nav.navbar-right:last-child { margin-right: 0px; }
+.navbar-collapse.collapse { display: block!important; }
+.navbar-nav { margin: 0px !important; a { padding: 15px !important; } }
+.navbar-nav > li, .navbar-nav { float: left !important; }
+.navbar-nav.navbar-right:last-child { margin-right: 0px !important; }
+.navbar-right { float: right!important; }
+
+/* basic layout 
+------------------------------------------------ */
+
+body, html, #wrap, .sidebar, .content { height: 100%; }
+
+body { min-width: $min-width !important; }
+
+#wrap {
+  box-sizing: border-box; 
+  margin-top: -51px;
+}
+
+.sidebar { 
+  position: absolute; 
+  width: 120px; 
+  float: left; 
+}
+
+.sidebar {  background-color: gray; }
+.content { background-color: yellow; }
+
 /* panel
 ------------------------------------------------ */
 .panel {
