--- a/app/assets/stylesheets/vars/_basic.css.scss
+++ b/app/assets/stylesheets/vars/_basic.css.scss
@@ -1,6 +1,8 @@
 /* peatio exchange site vars
 -------------------------------------------------------------- */
 
+$min-width: 1170px;
+
 $footer-bg: $body-bg;
 $footer-height: 120px;
 $footer-color: $gray-light;
